--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves
-
+        	<span class="moves">0</span> Moves&nbsp;
+            <span class="useTime">0</span> s
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
